# playwrightmd

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  pytest.ini
src/playwrightmd/: __init__.py
tests/: test_main_function.py  test_markdown_detection.py
